<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/rulesImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="170dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/rulesDsc"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rules" />

    <ImageButton
        android:id="@+id/newGameBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="15dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/newGameDsc"
        android:onClick="newGameBtnClick"
        app:layout_constraintBottom_toTopOf="@+id/exitGameBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rulesImageView"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@drawable/button_newgame" />

    <ImageButton
        android:id="@+id/exitGameBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="85dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/exitGameDsc"
        android:onClick="exitGameBtnClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/button_exitgame" />

</android.support.constraint.ConstraintLayout>